Add Prairie Twilight styling & basic content

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -2,14 +2,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Brunch</title>
+  <title>Clayton Hynfield</title>
+  <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Lato:100,400,800,900,400i/Aleo:300,400,700,400i">
   <link rel="stylesheet" href="/app.css">
   <script src="/app.js"></script>
   <script>require('initialize');</script>
 </head>
 <body>
-  <div class="brunch">
-    <a href="http://brunch.io"><img src="http://brunch.io/images/logo.png" alt="Brunch"></a>
-    <p>Bon Appétit.</p>
-  </div>
+  <header>
+    <h1>Clayton Hynfield</h1>
+  </header>
+  <main>
+    <section>
+      <p>Nine children and a <a href="http://clayton.hynfield.org/resume">day job</a> leave me little time for <a href="https://github.com/clhynfield/clayton.hynfield.org">tinkering with a personal website</a>, but I have some big ideas for this space.</p>
+    </section>
+  </main>
 </body>
