Add Massimo styling
Courtesy of Leban Hyde's impeccable [massimo-grid][]

[massimo-grid]: https://github.com/lhid/massimo-grid

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -8,13 +8,14 @@
   <script src="/app.js"></script>
   <script>require('initialize');</script>
 </head>
-<body>
-  <header>
-    <h1>Clayton Hynfield</h1>
+<body class="l-wrap">
+  <header class="l-row hrt hrt-1">
+    <h1 class="txt-c">Clayton Hynfield</h1>
   </header>
-  <main>
-    <section>
+  <section class="l-row hrt hrt-2">
+    <div class="l-col l-col-4"><h2>About</h2></div>
+    <div class="l-col l-col-8">
       <p>Nine children and a <a href="http://clayton.hynfield.org/resume">day job</a> leave me little time for <a href="https://github.com/clhynfield/clayton.hynfield.org">tinkering with a personal website</a>, but I have some big ideas for this space.</p>
-    </section>
-  </main>
+    </div>
+  </section>
 </body>
