Add proof-of-concept SVG

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -17,6 +17,9 @@
       <div class="l-col l-col-4"><h2>About</h2></div>
       <div class="l-col l-col-8">
         <p>Nine children and a <a href="http://clayton.hynfield.org/resume">day job</a> leave me little time for <a href="https://github.com/clhynfield/clayton.hynfield.org">tinkering with a personal website</a>, but I have some big ideas for this space.</p>
+        <object data="three-lines.svg" type="image/svg+xml">
+          Three lines
+        </object>
       </div>
     </section>
   </body>
