Add design(/engineering/business) thinking section

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -17,9 +17,16 @@
       <div class="l-col l-col-4"><h2>About</h2></div>
       <div class="l-col l-col-8">
         <p>Nine children and a <a href="http://clayton.hynfield.org/resume">day job</a> leave me little time for <a href="https://github.com/clhynfield/clayton.hynfield.org">tinkering with a personal website</a>, but I have some big ideas for this space.</p>
-        <object data="three-lines.svg" type="image/svg+xml">
-          Three lines
+      </div>
+    </section>
+    <section class="l-row hrt hrt-2">
+      <div class="l-col l-col-4">
+        <object data="golden-spiral.svg" type="image/svg+xml">
+          <h2>Design</h2>
         </object>
+      </div>
+      <div class="l-col l-col-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem dicta vitae autem dignissimos adipisci doloremque. Velit rem iusto voluptas, molestiae ipsa, cumque eveniet, dolore voluptatem quam sed nulla quod optio.</p>
       </div>
     </section>
   </body>
