Add engineering thinking graphic & placeholder

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -29,5 +29,15 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem dicta vitae autem dignissimos adipisci doloremque. Velit rem iusto voluptas, molestiae ipsa, cumque eveniet, dolore voluptatem quam sed nulla quod optio.</p>
       </div>
     </section>
+    <section class="l-row">
+      <div class="l-col l-col-4">
+        <object data="cog-cloud.svg" type="image/svg+xml">
+          <h2>Engineering</h2>
+        </object>
+      </div>
+      <div class="l-col l-col-8">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem dicta vitae autem dignissimos adipisci doloremque. Velit rem iusto voluptas, molestiae ipsa, cumque eveniet, dolore voluptatem quam sed nulla quod optio.</p>
+      </div>
+    </section>
   </body>
 </html>
