Manually tweak picture sizes
Till we can programmatically re-frame the SVGs, we'll need to
manually crop.

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -21,7 +21,7 @@
     </section>
     <section class="l-row hrt hrt-2">
       <div class="l-col l-col-4">
-        <object data="golden-spiral.svg" type="image/svg+xml">
+        <object class="pic-9" data="golden-spiral.svg" type="image/svg+xml">
           <h2>Design</h2>
         </object>
       </div>
@@ -31,7 +31,7 @@
     </section>
     <section class="l-row">
       <div class="l-col l-col-4">
-        <object data="cog-cloud.svg" type="image/svg+xml">
+        <object class="pic-9" data="cog-cloud.svg" type="image/svg+xml">
           <h2>Engineering</h2>
         </object>
       </div>
