--- a/app/index.html
+++ b/app/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width">
     <title>Clayton Hynfield</title>
     <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Lato:100,400,800,900,400i/Aleo:300,400,700,400i">
-    <link rel="stylesheet" href="/app.css">
-    <script src="/app.js"></script>
-    <script>require('initialize');</script>
+    <!-- build:css styles/main.css -->
+    <link rel="stylesheet" href="/styles/normalize.css">
+    <link rel="stylesheet" href="/styles/massimo.css">
+    <link rel="stylesheet" href="/styles/modules.css">
+    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="/styles/pictures.css">
+    <!-- endbuild -->
   </head>
   <body class="l-wrap">
     <header class="l-row hrt hrt-1">
@@ -21,7 +25,7 @@
     </section>
     <section class="l-row hrt hrt-2">
       <div class="l-col l-col-4">
-        <object class="pic-9" data="golden-spiral.svg" type="image/svg+xml">
+        <object class="pic-9" data="images/golden-spiral.svg" type="image/svg+xml">
           <h2>Design</h2>
         </object>
       </div>
@@ -31,7 +35,7 @@
     </section>
     <section class="l-row">
       <div class="l-col l-col-4">
-        <object class="pic-9" data="cog-cloud.svg" type="image/svg+xml">
+        <object class="pic-9" data="images/cog-cloud.svg" type="image/svg+xml">
           <h2>Engineering</h2>
         </object>
       </div>
@@ -40,4 +44,7 @@
       </div>
     </section>
   </body>
+  <!-- build:js scripts/main.js -->
+  <script src="scripts/main.js"></script>
+  <!-- endbuild -->
 </html>
