--- a/app/index.html
+++ b/app/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Clayton Hynfield</title>
-    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Lato:100,400,800,900,400i/Aleo:300,400,700,400i">
+    <link rel="stylesheet" href="https://brick.a.ssl.fastly.net/Lato:100,400,800,900,400i/Aleo:300,400,700,400i">
     <!-- build:css styles/main.css -->
-    <link rel="stylesheet" href="/styles/normalize.css">
-    <link rel="stylesheet" href="/styles/massimo.css">
-    <link rel="stylesheet" href="/styles/modules.css">
-    <link rel="stylesheet" href="/styles/styles.css">
-    <link rel="stylesheet" href="/styles/pictures.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/massimo.css">
+    <link rel="stylesheet" href="./styles/modules.css">
+    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles/pictures.css">
     <!-- endbuild -->
   </head>
   <body class="l-wrap">
@@ -45,6 +45,6 @@
     </section>
   </body>
   <!-- build:js scripts/main.js -->
-  <script src="scripts/main.js"></script>
+  <script src="./scripts/main.js"></script>
   <!-- endbuild -->
 </html>
