Make the header tall
Needs way more semantic, way less styling-related classes.

--- a/app/index.html
+++ b/app/index.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" href="./styles/modules.css">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/pictures.css">
+    <link rel="stylesheet/less" type="text/css" href="./styles/sections.less" />
     <!-- endbuild -->
   </head>
   <body class="l-wrap">
-    <header class="l-row hrt hrt-1">
+    <header class="hero l-row hrt hrt-1">
       <h1 class="txt-c">Clayton Hynfield</h1>
     </header>
     <section class="l-row hrt hrt-2">
@@ -46,5 +47,8 @@
   </body>
   <!-- build:js scripts/main.js -->
   <script src="./scripts/main.js"></script>
+  <!-- endbuild -->
+  <!-- build:remove -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
   <!-- endbuild -->
 </html>
