--- a/app/test.html
+++ b/app/test.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="https://brick.a.ssl.fastly.net/Lato:100,400,800,900,400i/Aleo:300,400,700,400i">
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/pictures.css">
+    <link rel="stylesheet/less" href="./styles/media-sizes.less">
+    <link rel="stylesheet/less" href="./styles/typefaces.less">
+    <link rel="stylesheet/less" href="./styles/type-sizes.less">
+    <link rel="stylesheet/less" href="./styles/color.less">
+    <link rel="stylesheet/less" href="./styles/layouts/three-qualities.less">
     <link rel="stylesheet/less" href="./styles/main.less">
     <!-- endbuild -->
     <style>
@@ -21,17 +27,18 @@
       <h1>Lorem</h1>
     </header>
     <section class="three-qualities">
+      <h2>Three Qualities</h2>
       <div>
         <h3>First</h3>
-        <p>Natus <strong>first</strong> enim numquam, placeat alias, eum consequuntur esse harum quasi perferendis officia laborum excepturi facilis qui tempore soluta fugiat dolorem incidunt cumque?</p>
+        <p>Natus first enim numquam, placeat alias</p>
       </div>
       <div>
         <h3>Second</h3>
-        <p>Autem tenetur <strong>second</strong> molestiae hic officiis harum temporibus, cupiditate ut quo vero aliquam sint repellat dolores commodi consectetur sed, eos ullam rem!</p>
+        <p>Autem tenetur second molestiae hic officiis</p>
       </div>
       <div>
         <h3>Third</h3>
-        <p>Accusantium illo cumque, officiis tempore? Nobis nisi ea, veniam commodi iusto ipsum architecto veritatis necessitatibus, alias sequi asperiores, repellat possimus optio saepe.</p>
+        <p>Accusantium illo third, officiis tempore?</p>
       </div>
     </section>
     <section>
@@ -44,8 +51,7 @@
     <section>
       <h2>Sit</h2>
       <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati labore ullam, molestias et nesciunt quisquam maiores autem inventore quae amet ea harum cumque placeat voluptatum error, ipsa illum aspernatur. Nesciunt?</p>
-        <p>Natus enim numquam, placeat alias, eum consequuntur esse harum quasi perferendis officia laborum excepturi facilis qui tempore soluta fugiat dolorem incidunt cumque?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati labore ullam, molestias et nesciunt quisquam maiores autem inventore quae amet ea harum cumque placeat voluptatum error, ipsa illum aspernatur. Nesciunt? Natus enim numquam, placeat alias, eum consequuntur esse harum quasi perferendis officia laborum excepturi facilis qui tempore soluta fugiat dolorem incidunt cumque?</p>
       </div>
     </section>
     <section>
