Rework copy to better illustrate Three Qualities

--- a/app/test.html
+++ b/app/test.html
@@ -30,15 +30,15 @@
       <h2>Three Qualities</h2>
       <div>
         <h3>First</h3>
-        <p>Natus first enim numquam, placeat alias</p>
+        <p>Natus first enim numquam, placeat alias, maiores impedit nesciunt</p>
       </div>
       <div>
         <h3>Second</h3>
-        <p>Autem tenetur second molestiae hic officiis</p>
+        <p>Autem tenetur second molestiae hic officiis hic nostrum officia</p>
       </div>
       <div>
         <h3>Third</h3>
-        <p>Accusantium illo third, officiis tempore?</p>
+        <p>Accusantium illo third, officiis tempore? Porro, veritatis.</p>
       </div>
     </section>
     <section>
