--- a/app/test.html
+++ b/app/test.html
@@ -15,18 +15,12 @@
     <link rel="stylesheet/less" href="./styles/layouts/three-qualities.less">
     <link rel="stylesheet/less" href="./styles/main.less">
     <!-- endbuild -->
-    <style>
-    body {
-      color: black;
-      width: 100%;
-    }
-    </style>
   </head>
   <body>
     <header>
       <h1>Lorem</h1>
     </header>
-    <section class="three-qualities">
+    <section class="three-qualities" id="ipsum">
       <h2>Three Qualities</h2>
       <div>
         <h3>First</h3>
